fixed other projects section and re aligned project img

--- a/src/components/styles/Project.module.css
+++ b/src/components/styles/Project.module.css
@@ -89,6 +89,7 @@
   width: 400px;
   position: inherit;
   right: 0;
+  top: 10%;
   left: 70%;
   z-index: -1;
   box-shadow: #001d3d 0px 0px 10px;
